Code editor: clean up some doc files

--- a/assets/editor/docs/applies/master/crash.4
+++ b/assets/editor/docs/applies/master/crash.4
@@ -5,9 +5,7 @@
 crash - function in master that is called in the event the driver crashes
 
 .SH SYNOPSIS
-.nf
-void crash( string crash_message, object command_giver,
-            object current_object );
+void crash( string crash_message, object command_giver, object current_object );
 
 .SH DESCRIPTION
 The driver calls crash() in master in the event that the driver crashes
