--- a/assets/editor/docs/applies/master/valid_socket.4
+++ b/assets/editor/docs/applies/master/valid_socket.4
@@ -5,9 +5,7 @@
 valid_socket - protects the socket efunctions.
 
 .SH SYNOPSIS
-.nf
-int valid_socket( object caller, string function,
-                  mixed *info );
+int valid_socket( object caller, string function, mixed *info );
 
 .SH DESCRIPTION
 Each of the socket efunctions calls valid_socket() prior to executing.
