--- a/assets/editor/docs/efuns/arrays/filter_array.3
+++ b/assets/editor/docs/efuns/arrays/filter_array.3
@@ -5,9 +5,7 @@
 filter_array() - return a selective sub-array
 
 .SH SYNOPSIS
-.nf
-mixed *filter_array( mixed *arr, string fun, object ob,
-                     mixed extra, ... );
+mixed *filter_array( mixed *arr, string fun, object ob, mixed extra, ... );
 mixed *filter_array( mixed *arr, function f, mixed extra, ...);
 
 .SH DESCRIPTION
