--- a/assets/editor/docs/efuns/buffers/read_buffer.3
+++ b/assets/editor/docs/efuns/buffers/read_buffer.3
@@ -5,9 +5,7 @@
 read_buffer() - read from a file and return a buffer, or return part of a buffer as a string
  
 .SH SYNOPSIS
-.nf
-string | buffer read_buffer( string | buffer src,
-                             int start,  int len );
+string | buffer read_buffer( string | buffer src, int start,  int len );
  
 .SH DESCRIPTION
 If 'src' is a string (filename), then the filename will be read, starting
