--- a/assets/editor/docs/efuns/calls/call_other.3
+++ b/assets/editor/docs/efuns/calls/call_other.3
@@ -5,9 +5,7 @@
 call_other() - call a function in another object
 
 .SH SYNOPSIS
-.nf
-unknown call_other( object ob | object *obs,
-                    string func | mixed *args, ... );
+unknown call_other( object ob | object *obs, string func | mixed *args, ... );
 
 .SH DESCRIPTION
 Calls a function in another object, with [optional] argument(s).  The return
