--- a/assets/editor/docs/efuns/buffers/write_buffer.3
+++ b/assets/editor/docs/efuns/buffers/write_buffer.3
@@ -5,9 +5,7 @@
 write_buffer() - write a buffer to a file, or read into a buffer from a source
  
 .SH SYNOPSIS
-.nf
-int write_buffer( string | buffer dest, int start,
-                  mixed source );
+int write_buffer( string | buffer dest, int start, mixed source );
  
 .SH DESCRIPTION
 If 'dest' is a file, then 'source' must be an int (and will be written to
